<resources>
    <string name="app_name">Dice</string>
    <string name="resultNumber" translatable="false">%d = %f%%</string>
    <string name="play">PLAY</string>
    <string name="results">RESULTS</string>
    <string name="restartGame">RESTART GAME</string>
    <string name="totalRolls">Total Rolls</string>
    <string name="result1">Result number 1</string>
    <string name="result2">Result number 2</string>
    <string name="result3">Result number 3</string>
    <string name="result4">Result number 4</string>
    <string name="result5">Result number 5</string>
    <string name="result6">Result number 6</string>
</resources>