<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameDicesResult"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restartGame"
        android:layout_gravity="end"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="@string/totalRolls"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/totalRolls"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:gravity="center"
            android:hint="0"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result1"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result2"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum3"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result3"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum4"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result4"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_4"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum5"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result5"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_5"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/dicenum6"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result6"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/result_6"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>